# OCR_Recognition

./: CLAUDE.md  README.md  pyproject.toml  samples.py  webserver.py
.claude/skills/frontend-design/: SKILL.md
docs/: PRD_OCR문서분석시스템.md  TRD_OCR문서분석시스템.md  checklist.md  context-notes.md  gemini-code-1782196536836.md  goal.md  plan.md  status.md  tests.md  문서지능-OCR-개발계획서.md  시스템 구동.md
src/ocr_docintel/: __init__.py  __main__.py  cli.py  context_llm.py  extract_docx.py  extract_hwp.py  extract_pdf.py  extract_xlsx.py  identify.py  ir.py  layout.py  ocr_scan.py  pipeline.py  schema.py  serialize.py  tables.py  validate.py
src/ocr_docintel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_context_llm.py  test_extract_advanced.py  test_extract_docx.py  test_extract_hwp.py  test_extract_pdf.py  test_extract_xlsx.py  test_identify.py  test_layout.py  test_ocr_scan.py  test_overmerge.py  test_pipeline.py  test_scan_kpi.py  test_serialize.py  test_tables.py  test_validate.py  test_webapi.py
webui/: app.js  index.html  ocr-screen.css
